# Vehicle-Insurance-Domain-Robust-pipleine_FastAPIs-

./: .gitignore  README.md  app.py  demo.py  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: aws.yaml
html_templates/: index.html
notebook/: exp-notebook.ipynb  mongo_db.ipynb
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  s3_estimator.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
static/: style.css
