[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [{name = "Kaulik Das", email = "kaulikdas2017@gmail.com"}]

[tool.setuptools.packages.find]
where = ["."]